--- a/src/index.html
+++ b/src/index.html
@@ -3,54 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel=stylesheet href="style.css" >
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class='cardBlock'>
+    <h1>What is a Capital of...</h1>
+    <div class='flex-container'>
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> Mexico </p></div>
+            </div>
+        </div>
 
-    <div class="header">
-        <h1> What is the capital of.. </h1>
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> Papua New Guinea </p></div>
+            </div>
+        </div>
+
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> Iceland </p></div>
+            </div>
+        </div>
+
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> South Korea </p></div>
+            </div>
+        </div>
+
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> Sweden </p></div>
+            </div>
+        </div>
+
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> Georgia </p></div>
+            </div>
+        </div>
+
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> Honduras </p></div>
+            </div>
+        </div>
+
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> Tunisia </p></div>
+            </div>
+        </div>
+
+        <div class='card-container'>
+            <div class='card'>
+                <div class='front'><p> Austria </p></div>
+            </div>
+        </div>
     </div>
-
-    <div class="game-board">
-
-        <div class="box">
-                <p>Australia</p>
-        </div>
-
-        <div class="box">
-            <p>New Zealand</p>
-        </div>
-
-        <div class="box">
-            <p>Indonesia</p>
-        </div>
-
-        <div class="box">
-            <p>Thailand</p>
-        </div>
-
-        <div class="box">
-            <p>India</p>
-        </div>
-
-        <div class="box">
-            <p>Taiwan</p>
-        </div>
-
-        <div class="box">
-            <p>Japan</p>
-        </div>
-
-        <div class="box">
-            <p>South Korea</p>
-        </div>
-
-        <div class="box">
-            <p>Pakistan</p>
-        </div>
-
-    </div>
-
+</div>
 </body>
 </html>
